0.35 2022-01-06
  [Prerequirement Changes]
    * SPVM 0.9679+ is needed.
  [New Features]
    * Added the closed field in the Sys::IO::DirStream class.
    * Added the closed field in the Sys::IO::FileStream class.
    * Added the no_need_free field in the Sys::IO::FileStream class.
0.34 2022-12-26
  [Prerequirement Changes]
    * SPVM 0.9677+ is needed.
0.33 2022-12-26
  [Prerequirement Bug Fix]
    * Fixed prerequirement in Makefile.PL because SPVM::Resource::SocketUtil is needed when "perl Makefile.PL" is executed.
  [Prerequirement Changes]
    * SPVM 0.9670+ is needed.
  [Test Improvement]
    * Improve Github Action workflow for tests. It supports latest Windows and the download of cpanm.
0.32 2022-12-20
  [Prerequirement Changes]
    * SPVM::Sys needs SPVM 0.9668+.
0.31 2022-12-15
  [Build Process Improvement]
    * Added --meta option to Makefile.PL
  [Build Process Bug Fix]
    * Fixed the SPVM module dependency in Makefile.PL
      [Before]
      PREREQ_PM => {
        'SPVM'              => '0.9665',
      },
      [After]
      CONFIGURE_REQUIRES => {
        'SPVM'              => '0.9665',
      },
  [Test Improvement]
    * Improve the workflow of Github Actions.
    
0.30 2022-12-13
  [Build Process Improvement]
    * Added --no-build-spvm-modules option to Makefile.PL.
    * Removed cpanm and added the command to download cpanm to the GitHub action script.
    * Github action scripts becomes more portable.
  [Incompatible Changes]
    * Changed the following method definitions in the Sys::Socket::Sockaddr class.
      -  method sa_family : byte ()
      +  method sa_family : int ()
    * Changed the following method definitions in the Sys::Socket::Sockaddr::In class.
      -  method sa_family : byte ()
      +  method sa_family : int ()
      -  method sin_family : byte ();
      +  method sin_family : int ();
      -  method set_sin_family : void ($family : byte);
      +  method set_sin_family : void ($family : int);