@@ -5,6 +5,7 @@
     * Added the closed field in the Sys::IO::DirStream class.
     * Added the closed field in the Sys::IO::FileStream class.
     * Added the no_need_free field in the Sys::IO::FileStream class.
+    * Added the lengthe field in the Sys::Poll::PollfdArray class.
 0.34 2022-12-26
   [Prerequirement Changes]
     * SPVM 0.9677+ is needed.
